--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- Create README file
 - Add option to Turn Off the monitor when Locking the screen
+- Add option to make optional ask for confirmation for some actions
 - Localization of the plasmoid
-- Add contextual menu with hidden options
+- Add contextual menu with unselected options
