--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 ---------------------
+2016-03-XX - v.1.1.0
+---------------------
+- Remove compilation warning
+- Other minor improvements
+
+
+---------------------
 2016-03-01 - v.1.0.0
 ---------------------
 - First public version
