--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 - Localization of the plasmoid
+- Rearrange icons position
+- Customize icons
 - Add contextual menu with unselected options
+- Select custom action
+- Add About tab in the Settings window
