Update TODO AND ChangeLog files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 ---------------------
+2016-04-XX - v.1.3.0
+---------------------
+- Rearrange icons position
+- Customize icons
+- Other minor improvements
+
+---------------------
 2016-03-14 - v.1.2.0
 ---------------------
 - Added localization support
