--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ---------------------
-2016-04-XX - v.1.3.0
+2016-04-18 - v.1.3.0
 ---------------------
-- Rearrange icons position
+- Rearrange icons
 - Customize icons
 - Other minor improvements
 
