--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 ---------------------
+2017-10-26 - v.1.4.0
+---------------------
+- Add breeze-dark theme icons
+
+---------------------
 2016-04-18 - v.1.3.0
 ---------------------
 - Rearrange icons
