--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 ---------------------
+2019-07-08 - v.1.6.0
+---------------------
+- Added Dutch translation (special thanks to Heimen Stoffels)
+- Other minor enhancements
+
+---------------------
 2019-07-07 - v.1.5.0
 ---------------------
 - Upgrade some QtQuick imports
