--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-- Add contextual menu with unselected options
-- Select custom action
-- Add About tab in the Settings window
+- Port confirmation dialog for sleep and hibernate actions.
+- Add contextual menu with unselected options.
+- Select custom action.
+- Add About tab in the Settings window.
