Update ChangeLog file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 ---------------------
+2024-06-23 - v.2.0.0
+---------------------
+- Port to KDe Plasma 6.
+- Other minor code enhancements. 
+
+---------------------
 2019-07-08 - v.1.6.0
 ---------------------
 - Added Dutch translation (special thanks to Heimen Stoffels)
