--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ---------------------
 2024-06-23 - v.2.0.0
 ---------------------
-- Port to KDe Plasma 6.
+- Port to KDE Plasma 6.
 - Other minor code enhancements. 
 
 ---------------------
